<resources>

    <!-- Strings related to the whole app -->
    <string name="app_name">FridgeMate</string>
    <string name="fridge_name">Fridge Name</string>
    <string name="forget_password">You will receive an email to reset your password.</string>
    <string name="this_is_null">(none)</string>
    <string name="connecting">Please connect to the Internet</string>
    <string name="contents">Contents</string>
    <string name="contents_title">Fridge Contents</string>
    <string name="family">Fridge Mates</string>
    <string name="shoplist">Grocery</string>
    <string name="shopping_list">Shopping List</string>
    <string name="feedback">Questions / Feedback</string>
    <string name="cantemail">There may be some email client issues.</string>
    <string name="userDoc_error">User doc loading Error</string>

    <!-- Strings related to the Anonymous login -->
    <string name="sample_name">Banana</string>

    <!-- Strings related to the Intro -->
    <string name="app_intro">Intro</string>
    <!--More Strings are in the IntroActivity.java-->

    <!-- Strings related to the setting -->
    <string name="theme">Themes</string>
    <string name="shape">Shape</string>
    <string name="mirror">Mirror</string>


    <!-- Strings related to welcome screen-->
    <string name="COOL">Presented By C.O.O.L</string>

    <!-- Example General settings/slide menu/edit profile -->
    <string name="profile_updated">User profile updated.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="username">nickname</string>
    <string name="profile_img">profile_img</string>
    <string name="status_hint">"This is my status"</string>
    <string name="example_email">user@email.com</string>
    <string name="hint_profile">profile_img</string>
    <string name="enter_password">Please enter your password:</string>
    <string name="no_password_needed">"Or click CONFIRM if you have logged in with a Google/Facebook account"</string>
    <string name="cant_deactivate">Deactivate Failed</string>
    <string name="user_deleted">All data have been deleted</string>
    <string name="image_not_detected">You have not selected and image</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="Register">Create New Account</string>
    <string name="log_in_success">user login successfully</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_out">Log Out</string>
    <string name="error_invalid_email">Format: example@ucsd.edu</string>
    <string name="error_invalid_password">Passwords must be a minimum of 6 characters.</string>
    <string name="error_duplicate_email">This email is already registered with an account.</string>
    <string name="error_email_not_validated">Please check your email for a new account validation link.</string>
    <string name="error_general">An error has occurred.</string>
    <string name="error_no_such_email">The email you have entered is not connected to an account.</string>
    <string name="error_login">The following email and password could not be validated.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required.</string>
    <string name="email_verification">An email containing a verification link has been sent.</string>
    <string name="error_load_data">Your user data could not be verified. Please login again.</string>
    <string name="title_activity_create_account">Sign up</string>
    <string name="title_activity_forgot_password">Reset Password</string>
    <string name="facebook_app_id">1304113589725229</string>
    <string name="fb_login_protocol_scheme">fb1304113589725229</string>


    <!-- Strings related to the fridge contents -->
    <string name="hint_name">Item Name</string>
    <string name="hint_date">Item Expiration Date</string>
    <string name="button_save">Save</string>
    <string name="button_saving">(Saving. Please Wait)</string>
    <string name="empty_not_saved">Item not saved.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="no_items">You have no items in this fridge!</string>
    <string name="exp_date">Expiration Date:</string>
    <string name="exp_bar">Fresh Bar:</string>
    <string name="name">Name:</string>
    <string name="no_exp">No Expiration</string>
    <string name="fresh">Fresh</string>
    <string name="expired">Expired</string>
    <string name="one_day">1 Day</string>
    <string name="hint_image">item_image</string>
    <string name="toShopList">Item moved to shopping list</string>
    <string name="item_unnamed">Please name the item</string>


    <!-- Strings related to the whole fridge family-->
    <string name="create_fridge">Create Fridge Family</string>
    <string name="leave_fridge">Leave</string>
    <string name="rename_fridge">Rename</string>
    <string name="fridge_setup_message">Setting up your very own fridge&#8230;</string>
    <string name="fridge_setup_complete">Swipe down to see the contents.</string>
    <string name="delete_fridge_warning">Warning: If you leave this fridge, it will be permanently deleted!</string>
    <string name="leave_fridge_warning">Are you sure you want to leave this fridge?</string>
    <string name="one_fridge_error">You can\'t leave your only fridge!</string>
    <string name="join_fridge_error">No such fridge ID could be found.</string>
    <string name="join_fridge_duplicate">You are already in this Fridge Family!</string>
    <string name="join_fridge_success">Join Successful!</string>
    <string name="join_fridge_hint">Paste fridge ID here</string>
    <string name="fridge_quote">If music must be the food of love, play on.</string>
    <string name="join">Join This Fridge</string>
    <string name="create">Create New Fridge</string>
    <string name="paste_id_prompt">(Long clicking on a fridge icon)</string>
    <string name="invite">Invite</string>
    <string name="mate_quote">My best friend is the one who brings out the best in me.</string>
    <string name="quote_name">- Henry Ford</string>
    <string name="type_id_prompt">Type ID here</string>
    <string name="type_email_prompt">Type your friend\'s email here</string>
    <string name="example_status">"Hey yall!"</string>
    <string name="prompt_current_fridge">(Current Fridge ID)</string>
    <string name="member_removed">Member removed</string>
    <string name="join_option">Option 1: Join a fridge</string>
    <string name="create_option">Option 2: Create a fridge</string>
    <string name="invite_option">Invite a new member to your fridge:</string>
    <string name="no_user">No such user exists</string>
    <string name="double_add">Opps, you can\'t add this person again</string>
    <string name="sent_invite">Invitation sent!</string>
    <string name="sent_join">Joining request sent!</string>

    <!-- Strings related to the Quick Add-->
    <string name="itemName">item</string>
    <string name="ok">OK</string>
    <string name="add_all">Add All</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="ocr_guide">Scan and Click on the names of your grocery.</string>

    <!-- Strings related to the Recipe Suggestion-->
    <string name="endorse">Powered By recipepuppy</string>
    <string name="recipe_suggestion">Recommended Recipes</string>
    <string name="loading">Loading recipes&#8230;</string>
    <string name="no_result">Sorry. We couldn\'t find relavant recipe for you at the moment.</string>
    <string name="server_err">Server Error</string>
    <string name="first_page">This is the first page.</string>
    <string name="last_page">This is the last page.</string>

    <!-- Strings related to the shopping list-->
    <string name="one">1</string>
    <string name="add">ADD</string>
    <string name="fridge_all">Fridge Them (0)</string>
    <string name="amount">Amount:</string>
    <string name="select">Select</string>
    <string name="hint_shoplist_item">What to buy?</string>
    <string name="no_fridged">There is Nothing to Fridge</string>
    <string name="amountMax">99</string>
    <string name="prompt_adding">Adding.. Please wait</string>

</resources>
