<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fridgemate.yangliu.fridgemate.current_contents.ContentScrollingFragment">

    <item
        android:id="@+id/profile_settings"
        android:icon="@drawable/ic_person_pin_black_24dp"
        android:title="@string/edit_profile"
        />

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_border_clear_black_24dp"
        android:title="@string/theme"
        />

    <item
        android:id="@+id/feedback"
        android:icon="@drawable/ic_message_black_24dp"
        android:title="@string/feedback"
        />

    <item
        android:id="@+id/log_out"
        android:orderInCategory="101"
        android:icon="@drawable/ic_power_settings_new_black_24dp"
        android:title="@string/action_log_out" />

</menu>
