<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/one_item_frame"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_margin="1dp">

    <android.support.v7.widget.CardView
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:stateListAnimator="@anim/animation"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|fill_horizontal"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/item_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="15"
                android:contentDescription="@string/hint_image"
                android:src="@color/white"
                android:transitionName="item_image"
                android:visibility="visible"
                app:border_color="@color/colorBad"
                app:border_width="1dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_view"
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingBottom="5dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/hint_name"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/date_view"
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:gravity="start|center"
                        android:paddingEnd="0dp"
                        android:paddingStart="10dp"
                        android:text="@string/no_exp"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/freshDays"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center_vertical"
                        android:text="@string/fresh"
                        android:textColor="?colorPrimaryDark"
                        android:textSize="14sp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:progress="100"
                    android:progressDrawable="@drawable/greenprogress" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="33dp"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_delete_sweep_black_24dp" />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>