<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">


        <EditText
            android:id="@+id/edit_word"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"

            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_name"
            android:inputType="textAutoComplete"
            android:textSize="18sp"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintBottom_toTopOf="@id/button_save"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintHorizontal_bias="0.0"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/item_progress_bar"
            custom:layout_constraintVertical_bias="0.29000002" />

        <Button
            android:id="@+id/button_save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:text="@string/button_save"
            custom:layout_constraintBottom_toBottomOf="parent"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintHorizontal_bias="0.0"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/edit_word"
            custom:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    custom:srcCompat="@drawable/ic_camera_alt_black_24dp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2" />
            </FrameLayout>

            <EditText
                android:id="@+id/edit_date"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:fontFamily="sans-serif-light"
                android:gravity="center_vertical|center"
                android:hint="@string/hint_date"
                android:textSize="18sp"
                custom:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="16dp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/item_progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="8dp"
            android:transitionName="progress_bar"
            custom:layout_constraintEnd_toEndOf="parent"
            custom:layout_constraintHorizontal_bias="0.0"
            custom:layout_constraintStart_toStartOf="parent"
            custom:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>